# tgsend

./: .env.dist  .gitignore  Makefile  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
tgsend/: main.py
